--- a/views/failed_attempt.pug
+++ b/views/failed_attempt.pug
@@ -3,4 +3,4 @@ html
 		title Failed attempt to website
 	body
 		p You can't access this website until you have logged in.
-		a(href='/login') Login
+		a(href='https://express-tutorial3.glitch.me/login') Login
