--- a/views/login.pug
+++ b/views/login.pug
@@ -1,12 +1,13 @@
 html
 	head
-		title Login
-	body
-			form(action = "/login" method = "POST")
-				input(name = "id" type = "text" required placeholder = "User ID")
-				input(name = "password" type = "password" required placeholder = "Password")
-				button(type = "Submit") Log in
-			if(message)
-				h4 #{message}
-			if(invalid)
-				a(href='/signup') Signup
+	title Login
+body
+	p Login
+	form(action = "https://express-tutorial3.glitch.me/login" method = "POST")
+		input(name = "id" type = "text" required placeholder = "User ID")
+		input(name = "password" type = "password" required placeholder = "Password")
+		button(type = "Submit") Log in
+	if(message)
+		h4 #{message}
+	if(invalid)
+		a(href='https://express-tutorial3.glitch.me/signup') Signup
