--- a/views/protected_page.pug
+++ b/views/protected_page.pug
@@ -1,8 +1,9 @@
 html
-	head
-			title Protected page
-	body
-			div Hey #{id}, How are you doing today?
-			div Want to log out?
-			div
-				a(href='/logout') Logout
+    head
+        title Protected page
+    body
+        p Protected page
+        div Hey #{id}, How are you doing today?
+        iframe(width='100%', height='80%', src="https://editor.p5js.org/g323hs/embed/N9A9J0tsB")
+        p
+            a(href='https://express-tutorial2.glitch.me/logout') Logout
